# food-decision-maker

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/: __init__.py
src/api/recommend/: request.py  response.py  router.py
src/core/: config.py
src/decision/: __init__.py  food_engine.py  utils.py
src/http_client/: __init__.py  base.py  food.py
src/schemas/: __init__.py  category.py  menu.py  restaurant.py
