[project]
name = "food-decision-maker"
version = "0.1.0"
description = "Decision maker service for food delivery chat bot"
authors = [
    {name = "FranChesK0"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "experta (>=1.9.4,<2.0.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "async-lru (>=2.0.4,<3.0.0)",
    "rapidfuzz (>=3.11.0,<4.0.0)"
]
packages = [
  {"include" = "src", "from" = "."}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [
  {"include" = "src", "from" = "."}
]


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
mypy = "^1.14.1"


[tool.black]
line-length = 90
target-version = ["py312"]

[tool.flake8]
max-line-length = 90
count = true

[tool.isort]
profile = "black"
py_version = 312
line_length = 90
length_sort = true
multi_line_output = 3
include_trailing_comma = true
src_paths = ["src", "tests"]
extend_skip = ["__init__.py"]

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
