[tool.poetry]
name = "food-decision-maker"
version = "0.1.0"
description = "Decision maker service for food delivery chat bot"
authors = ["FranChesK0"]
license = "Apache-2.0"
readme = "README.md"
packages = [
  {"include" = "src", "from" = "."}
]


[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
loguru = "^0.7.3"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
experta = "^1.9.4"
aiohttp = "^3.11.11"
async-lru = "^2.0.4"
rapidfuzz = "^3.11.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
mypy = "^1.14.1"


[tool.black]
line-length = 90
target-version = ["py312"]

[tool.flake8]
max-line-length = 90
count = true

[tool.isort]
profile = "black"
py_version = 312
line_length = 90
length_sort = true
multi_line_output = 3
include_trailing_comma = true
src_paths = ["src", "tests"]
extend_skip = ["__init__.py"]

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true


[build-system]
requires = ["poetry-core>"]
build-backend = "poetry.core.masonry.api"
packages = [
  {"include" = "src", "from" = "."}
]
